--- a/BankClient/web/css/mainstyle.css
+++ b/BankClient/web/css/mainstyle.css
@@ -5,11 +5,9 @@ body {
 
 .header_container {
     background-color: #6451d5;
-    position: relative;
-    width: 100%;
+    /*position: relative;*/
+    width: 100%; 
     height: 100px;
-    
-
 }
 
 .logo_container {
@@ -210,11 +208,11 @@ input[type="submit"] {
 
 
 .login_footer {
-    position: absolute;
+    /*position: absolute;
     bottom: 0px;
     padding: 0px;
     margin: 0px;
-    /*padding-left: 20px;
+    padding-left: 20px;
     margin-top: 20px;*/
     background-color: #D7D4D4;
     color: #848484;
